# pycodium

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  build_hook.py  main.py  pyproject.toml  renovate.json  rxconfig.py  skills-lock.json  tauri.conf.json  zizmor.yml
.ast-grep/rules/: remove-pytest-asyncio-mark.yml
.github/: actionlint.yaml  copilot-instructions.md  requirements-openhands.in  requirements-openhands.txt
.github/workflows/: integration-tests.yaml  mypy.yaml  openhands.yaml  performance-tests.yaml  pre-commit.yaml  pyright.yaml  release-please.yaml  tests.yaml  unit-tests.yaml
.openhands/: pre-commit.sh  setup.sh
.openhands/microagents/: default-tools.md
pycodium/: constants.py  main.py  menu.py  pycodium.py  state.py  version.py
pycodium/components/: command_palette.py  command_palette_state.py  editor_area.py  editor_tabs.py  file_explorer.py  hotkey_watcher.py  monaco.py  resizable_panels.py  settings.py  status_bar.py  tauri_menu_handler.py
pycodium/controllers/: __init__.py  editor_controller.py
pycodium/models/: monaco.py  tabs.py
pycodium/utils/: lsp_client.py  processes.py
reflex.lock/: package.json
tests/: conftest.py  helpers.py  test_main.py  test_pycodium.py
tests/integration/: conftest.py  test_command_palette.py  test_file_watching.py  test_initial_path.py  test_lsp_after_interpreter_change.py  test_lsp_client.py  test_lsp_editor.py  test_lsp_features.py  test_menu_actions.py  test_pycodium.py  test_status_bar.py  test_tauri_app.py
tests/performance/: conftest.py  test_editor_loading.py  test_file_tree_loading.py
tests/unit/: conftest.py  test_main.py  test_state.py
tests/unit/components/: test_menu_events.py  test_tauri_menu_handler.py
tests/unit/utils/: test_detect_encoding.py  test_detect_lang.py  test_processes.py
